Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11, 11.4, 11.8
-
Unexpected results
-
Q4/2025 Server Maintenance, Q1/2026 Server Maintenance
Description
main.intersect_all has incorrect results.
In particular,
1.
select * from t1 intersect all select * from t2 union values (1, 2); |
select * from t1 intersect all (select * from t2 union values (1, 2)); |
(select * from t1 intersect all select * from t2) union values (1, 2); |
The result of the first query must match the result of the second or the result of the third. Now it returns something different.
2.
One cannot simply document that don't use views in oracle mode, they aren't supported and don't work, because "VIEW is stored and executed normal mode (see Sql_mode_save_for_frm_handling)". Views must work, if they don't — it should be fixed.
The test and the above comment were added in MDEV-25158, but the bug itself is not caused by MDEV-25158, it is present in 10.11 releases
Attachments
Issue Links
- causes
-
MDEV-38799 Some views are broken in Oracle mode after upgrade to Q1 2026
-
- Closed
-
-
MDEV-38987 ASAN heap-use-after-free upon using a view through a trigger in ORACLE mode
-
- Closed
-
-
MDEV-39522 Query with UNION fails in Oracle sql_mode with ER_BAD_FIELD_ERROR/ER_UNKNOWN_TABLE
-
- Closed
-
-
MDEV-39543 Assertion `entry->pos_in_table_list->table == entry' failed upon PREPARE with UNION in ORACLE mode
-
- Open
-
- is duplicated by
-
MDEV-37272 Wrong results in intersect all in Oracle Mode under view
-
- Open
-
- relates to
-
MDEV-37272 Wrong results in intersect all in Oracle Mode under view
-
- Open
-
-
MDEV-38423 MTR --view displays wrong column name
-
- Open
-